--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install --no-cache-dir -r requirements.txt --retries 10 --timeout 60
 COPY . /app/
 COPY ./wait-for-it.sh /app/
 
-RUN chmod +x wait-for-it.sh
+RUN chmod +x /app/wait-for-it.sh
 RUN chmod 644 /app/.env
 
 CMD ["python", "src/manage.py", "runserver", "0.0.0.0:8000"]
