--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     ports:
       - "8000:8000"
     command: >
-      sh -c "./wait-for-it.sh db:5432 -- python manage.py migrate &&
+      sh -c "/app/wait-for-it.sh db:5432 --timeout=60 -- python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
 
   nginx:
