actually starting up and can go to localhost:8000 but db isn't being initialized I don't think

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt --retries 10 --timeout 60
 
 COPY . /app/
-COPY ./wait-for-it.sh /app/
+COPY ./wait-for-it.sh /app/wait-for-it.sh
 
 RUN chmod +x /app/wait-for-it.sh
 RUN chmod 644 /app/.env
