--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   db:
-    image: postgres:latest
+    build:
+      context: ./db
+      dockerfile: Dockerfile
     container_name: db
     restart: always
     volumes:
@@ -29,12 +31,12 @@ services:
     env_file:
       - ./backend/.env
     volumes:
-      - ./backend/src:/app
+      - ./backend:/app
     ports:
       - "8000:8000"
     command: >
-      sh -c "/app/wait-for-it.sh db:5432 --timeout=60 -- python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+      sh -c "/app/wait-for-it.sh db:5432 --timeout=60 -- python /app/src/manage.py migrate &&
+             python /app/src/manage.py runserver 0.0.0.0:8000"
 
   nginx:
     image: nginx:latest
