--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,17 +38,16 @@ services:
       sh -c "/app/wait-for-it.sh db:5432 --timeout=60 -- python /app/src/manage.py migrate &&
              python /app/src/manage.py runserver 0.0.0.0:8000"
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx_proxy
+  frontend:
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile  # This builds the React app and serves it with Nginx
+    container_name: frontend
     restart: always
+    ports:
+      - "80:80"  # Serve the static files via Nginx
     depends_on:
       - backend
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./frontend/dist:/usr/share/nginx/html
-    ports:
-      - "80:80"
 
 volumes:
   postgres_data:
