--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,10 @@ services:
     ports:
       - "8000:8000"
     command: >
-      sh -c "/app/wait-for-it.sh db:5432 --timeout=60 -- python /app/src/manage.py migrate &&
-             python /app/src/manage.py runserver 0.0.0.0:8000"
+      sh -c "/app/wait-for-it.sh db:5432 --timeout=60 -- 
+            python /app/src/manage.py makemigrations &&
+            python /app/src/manage.py migrate &&
+            uvicorn src.main:app --host 0.0.0.0 --port 8000"
 
   frontend:
     build:
